# oepnai-asio

./: .gitignore  .gitmodules  CMakeLists.txt  CONDA.md  LICENSE  README-CN.md  README.md  VCPKG.md  build.ps1  build.sh  vcpkg.json
.github/workflows/: clang.yml  msvc.yml
cmake/: openai-asio-config.cmake.in
conda/: README.md  bld.bat  build.sh  conda_build_config.yaml  meta.yaml
example/: 00-showcase.cpp  01-chat.cpp  02-chat-conversation.cpp  03-chat-system-role.cpp  04-http-test.cpp  05-model.cpp  06-completion.cpp  07-edit.cpp  08-image.cpp  09-embedding.cpp  10-file.cpp  11-fine-tune.cpp  12-audio.cpp  13-moderation.cpp  CMakeLists.txt
src/: openai-client.cpp  openai-client.cppm  openai-http_client.cpp  openai-http_client.cppm  openai-types.cppm  openai.cppm
src/client/: README.md  assistant_client.cppm  audio_client.cppm  base_client.cppm  chat_client.cppm  completion_client.cppm  embedding_client.cppm  file_client.cppm  fine_tuning_client.cppm  image_client.cppm  model_client.cppm  moderation_client.cppm  run_client.cppm  thread_client.cppm  unified_client.cppm
src/message/: assistant.cppm  audio.cppm  chat.cppm  common.cppm  completion.cppm  embedding.cppm  file.cppm  fine_tuning.cppm  image.cppm  model.cppm  moderation.cppm  run.cppm  thread.cppm
